# harmony-study-app

./: .gitignore  .prettierignore  CONTRIBUTING.md  README.md
.github/: copilot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: pbi.md
.github/prompts/: coding-rules.md  design-philosophy.md  development-process.md  frontend-rules.md  harmony_domain_knowledge.md  project-charter.md  tech-stack.md
.github/workflows/: frontend-ci.yml  python-ci.yml
.husky/: pre-commit
backend/: main.py  pyproject.toml
backend/data/: tasks.json
backend/models/: __init__.py  harmony_task_model.py
backend/repositories/: __init__.py  harmony_task_repository.py  json_harmony_task_repository.py
backend/routes/: __init__.py  tasks.py
backend/tests/: test_harmony_task_model.py  test_json_harmony_task_repository.py  test_tasks_router.py
docs/: README.md  adr_harmony_task_model.md  adr_template.md  coding-rules.md  development-process.md  tech-stack.md
docs/ADR/: adr_harmony_task_list_ui.md  adr_harmony_task_model.md  adr_persistence_layer.md
docs/development/: coding-rules.md  design-guidelines.md  design-philosophy.md  development-guidelines.md  development-process.md
docs/domain/: harmony_domain_knowledge.md
docs/project/: development-backlog.md  development-plan.md  project-charter.md  task-template.md
docs/project/issues/continuous/: CT-01.md  CT-02.md  CT-03.md  CT-04.md
docs/project/issues/phase0/: PH0-01.md  PH0-02.md  PH0-03.md  PH0-04.md  PH0-05.md  PH0-06.md  PH0-07.md  PH0-08.md  PH0-09.md
docs/project/issues/phase1/: PH1-01.md  PH1-02.md  PH1-03.md  PH1-04.md  PH1-05.md  PH1-06.md  PH1-07.md  PH1-08.md  PH1-09.md  PH1-10.md
docs/project/issues/phase2/: PH2-01.md  (+7 more)
frontend/: .eslintrc.json  README.md  eslint.config.js  jest.config.cjs  jest.config.js  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vitest.config.ts
frontend/src/: App.tsx  index.css  setupTests.ts  theme.ts
frontend/src/__tests__/: App.test.tsx  HarmonyTaskItems.test.tsx  harmonyTaskApi.test.ts  harmonyTaskModel.test.ts  jsonHarmonyTaskRepository.test.ts
frontend/src/api/: harmonyTaskApi.ts
frontend/src/models/: harmonyTaskModel.ts  harmonyTaskModel.ts.new
frontend/src/repositories/: harmonyTaskRepository.ts  jsonHarmonyTaskRepository.ts
frontend/src/types/: mui.d.ts
(+7 files in other folders)
