[project]
name = "harmony-backend"
version = "0.1.0"
description = "Harmony study app backend"
requires-python = "==3.12.*"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "mypy>=1.16.0"
]

[tool.ruff]
line-length = 120
# すべてのルールセットを有効化し、FastAPI以外のフレームワーク専用ルールのみ除外（pytest・pathlib・type stubは有効化）
select = [
    "ALL"
]
ignore = [
    "AIR",  # Airflow
    "DJ",   # Django
    "DTZ",  # Django timezone
    "PD",   # pandas
    "NPY",  # NumPy
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN201", "D103", "S101", "PLR2004"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
