[project]
name = "harmony-backend"
version = "0.1.0"
description = "Harmony study app backend"
requires-python = "==3.12.*"
dependencies = [
    "pydantic>=2.11.7",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "mypy>=1.16.0"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "AIR",  # Airflow
    "DJ",   # Django
    "DTZ",  # Django timezone
    "PD",   # pandas
    "NPY",  # NumPy
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN201", "D103", "D100", "S101", "PLR2004"]
"tests/__init__.py" = ["D104"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
