[project]
name = "harmony-backend"
version = "0.1.0"
description = "Harmony study app backend"
requires-python = "==3.12.*"
dependencies = [
    "pydantic>=2.11.7",
    "aiofiles>=23.2.1",  # 非同期ファイルI/O
    "typing-extensions>=4.10.0",  # Result型パターン用
    "fastapi>=0.110.0",  # Web API
    "uvicorn>=0.27.1",  # ASGIサーバー
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "mypy>=1.16.0"
]

[tool.setuptools]
packages = ["models", "repositories"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "AIR",  # Airflow
    "DJ",   # Django
    "DTZ",  # Django timezone
    "PD",   # pandas
    "NPY",  # NumPy
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN201", "D103", "D100", "S101", "PLR2004"]
"tests/__init__.py" = ["D104"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
